--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ dependencies = [
     "pandas==2.0.3",
     "patsy==0.5.3",
     "Pillow==8.4.0",
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
     "psycopg2-binary==2.9.5",
     "pycparser==2.21",
     "pyparsing==3.0.6",
@@ -66,7 +68,7 @@ dependencies = [
     "trio==0.22.0",
     "trio-websocket==0.9.2",
     "trueskill==0.4.5",
-    "typing-extensions==4.0.0",
+    "typing-extensions>=4.6.1",
     "urllib3==1.26.7",
     "wsproto==1.2.0",
     "yarl==1.8.2",
